tests/dbg_cases/errors/undefined_func/test.csm
// Test dbg() with undefined function call
i32 main() {
    dbg(undefined_func());
    return 0;
}
